--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "my portfolio site",
   "main": "index.js",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dis/css/ --recursive",
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
